# flow-generator

./: .gitignore  docker-compose.yml  start.sh
backend/: .dockerignore  Dockerfile  print_svg.py  requirements.txt  test_col.py  test_old_dsl.py  test_parse.py  test_svg.py
backend/app/: main.py
backend/app/generator/: cli.py  pyproject.toml
backend/app/generator/ai/: assistant.py
backend/app/generator/examples/: test.md
backend/app/generator/exporters/: graphviz_exporter.py
backend/app/generator/generators/: base.py  bpmn.py  drawio.py  mermaid.py  plantuml.py
backend/app/generator/graph/: __init__.py  compiler.py
backend/app/generator/layout/: __init__.py  astar_router.py  edge_router.py  graph.py  layout_engine.py  node_placer.py  obstacle_detector.py  preview_renderer.py
backend/app/generator/parser/: ast.py  base.py  flow_json_parser.py  flow_parser.py  yaml_parser.py
backend/app/generator/templates/: bpmn.xml.j2  drawio.xml.j2
backend/app/generator/validator/: validator.py
flow-generator/: README.md
flow-generator/examples/: cash_before_delivery.md  cbd.md  procurement.md
flow-generator/exporters/: graphviz_exporter.py
flow-generator/generators/: base.py  bpmn.py  drawio.py  mermaid.py  plantuml.py
flow-generator/graph/: builder.py  compiler.py
flow-generator/layout/: __init__.py  connector.py  optimizer.py
flow-generator/parser/: ast.py  base.py  flow_parser.py  yaml_parser.py
flow-generator/templates/: drawio.xml.j2
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  test_viewer.html
(+16 files in other folders)
