[project]
name = "flow-generator"
version = "0.1.0"
description = "AI Flow Generator for converting business process descriptions into diagrams"
authors = [
    {name = "AI"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pydantic>=2.7.4",
    "lxml>=5.2.2",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.1",
    "graphviz>=0.20.3",
    "cairosvg>=2.7.1",
    "pillow>=10.3.0",
    "xmltodict>=0.13.0",
    "networkx>=3.0"
]

[project.scripts]
flowgen = "cli:app"
